# qvtfpp

./: .gitmodules  CMakeLists.txt  README.md  metainfo.yaml
ext/: _ext.cmake
install/: _install.cmake  mime-type.xml
src/: QVTFPlugin.cpp  QVTFPlugin.h  QVTFPlugin.json
